[package]
name = "rustiny_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustiny_game"
crate-type = ["dylib"]

[dependencies]
bevy = {version = "0.5", default-features = false}
cgmath = "0.18.0"
lazy_static = "*"
log = "*"
rand = "0.8.4"
simplelog = "*"
libloading = "0.7"
rustiny = { path = "../rustiny" }
